<resources>
    <string name="app_name">ShareCareDesign</string>
    <string name="share_care">ShareCare</string>
    <string name="welcome_to_uiu_community">Welcome To UIU Community</string>
    <string name="log_in">Log IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_to_home">Log in</string>
    <string name="share_care_log_in">Share Care</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="registration_form">Registration Form</string>
    <string name="email">Email :</string>
    <string name="enter_your_email">Enter your varsity email.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name :</string>
    <string name="enter_your_student_id">Enter your student ID</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="phone">Phone :</string>
    <string name="enter_your_password">Enter your password.</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_your_password_confirm">Enter your password confirm.</string>
    <string name="share_ride">SHARE RIDE</string>
    <string name="take_ride">TAKE RIDE</string>
</resources>