<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="384dp"
        android:layout_height="77dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="11dp"
        android:text="@string/share_care"
        android:textAlignment="center"
        android:textColor="#FBB155"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="396dp"
        android:layout_height="50dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:text="@string/welcome_to_uiu_community"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="121dp"
        android:backgroundTint="#F57F17"
        android:onClick="launchLogIn"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="121dp"
        android:backgroundTint="#F57F17"
        android:onClick="launchSingUP"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="128dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="111dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_uiu" />

</androidx.constraintlayout.widget.ConstraintLayout>