<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogINActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="316dp"
        android:layout_height="60dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="47dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName|textPassword"
        android:paddingStart="12dp"
        android:paddingLeft="5dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="0dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="144dp"
        android:backgroundTint="#F57F17"
        android:onClick="launchLogInHome"
        android:text="@string/log_in_to_home"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="148dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="91dp"
        android:src="@drawable/logo_uiu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>